# baseline-py

./: .gitattributes  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: release.yml
baseline/: __init__.py  __main__.py  core.py  errors.py  models.py  schema.py
baseline/extractors/: __init__.py  common.py  executables.py  filesystem.py
baseline/interface/: __init__.py  root.py
gui/: convert.py  data.json  graph_cytoscape.json  index.html
templates/: debugging.json  html.jinja  ndjson.jinja
